src/sass/style.scss
@import "./reset";
@import "./variables/colors";
@import "./variables/typography";
@import "./variables/spacing";
@import "./variables/breakpoints";
@import "./variables/animations";
@import "./variables/mixins";



html {
    overflow-x:hidden;
    scroll-behavior: smooth;
}

.frontpage.warning {

    width:100vw;
    height:100vh;
    display:flex;
    align-items: center; 
    justify-content: center;
}

.location_link {
    text-decoration:none;
}

.btn {
    padding:8px 35px;
    border-radius: 30px;
    display:inline-block;
    text-decoration: none;
    text-transform: uppercase;
    margin:10px 10px 10px 0;
    line-height: 35px;
    cursor: pointer;
    font-size: var(--small-p);

    &:visited {
        color:inherit;
    }

    white-space: normal;

    @include phone{
        padding:6px 30px;
    }

    @include tablet{
        padding:10px 50px;
        font-size:var(--small-btn);
    }

    @include desktop-s{
        padding:5px 28px;
    }

}

.action_btn {
    background:$action-gradient;
    color:$white;
    text-shadow: 2px 2px 1px rgba(139, 24, 17, 0.25);
    transition: background-color .6s ease, color .3s ease;

    &:visited {
        color:$white;
    }

    &:hover {
        background:$white;
        color:$black;
        text-shadow: none;
        transition: background-color .6s ease, color .3s ease;
    }
}

.action_btn.black {
    transition: background-color .6s ease, color .3s ease;

    &:hover {
        background:$black;
        color:$white;
        transition: background-color .6s ease, color .3s ease;
    }
}

.secondary_btn {
    background:$white;
    color:$black;
    transition: background-color .6s ease, color .3s ease;

    &:visited {
        color:$white;
    }

    &:hover {
        background:$action-gradient;
        color:$white;
        text-shadow: 2px 2px 1px rgba(139, 24, 17, 0.25);
        transition: background-color .6s ease, color .3s ease;
    }
}

.secondary_btn.black {
    background:$black;
    color:$white;
    transition: background-color .6s ease, color .3s ease;

    &:hover {
        background:$action-gradient;
        color:$white;
        text-shadow: 2px 2px 1px rgba(139, 24, 17, 0.25);
        transition: background-color .6s ease, color .3s ease;
    }
}

.ghost_btn {
    background:none;
    border:1px solid;
}

.ghost_btn.white {
    border-color:$white;
    color:$white;
    transition: background-color .6s ease, color .3s ease;

    &:hover {
        background:$white;
        color:$black;
        transition: background-color .6s ease, color .3s ease;
    }
}

.ghost_btn.black {
    border-color:$black;
    color:$black;
    transition: background-color .6s ease, color .3s ease;

    &:hover {
        background:$black;
        color:$white;
        transition: background-color .6s ease, color .3s ease;
    }
}

.read_more_link {
    @include textLink;
    display:block;
}

.button_repeater {

    .read_more_link {
        margin-top:10px;
        margin-bottom:10px;

        @include phone {
            margin-top:25px;
            margin-bottom:25px;
        }
    }

}

.next_posts_btn_wrap {

    a {
        padding:10px 44px;
        border-radius: 30px;
        display:inline-block;
        text-decoration: none;
        text-transform: uppercase;
        margin:10px 0;
        line-height: 35px;
        cursor: pointer;
        font-size: var(--small-p);


        white-space: normal;

        background:$black;
        color:$white;
        transition: background-color .6s ease, color .3s ease;

        &:hover {
            background:$action-gradient;
            color:$white;
            text-shadow: 2px 2px 1px rgba(139, 24, 17, 0.25);
            transition: background-color .6s ease, color .3s ease;
        }
    }

}

.slider_button {
    background:$action-gradient;           
    width:80px;
    height:80px;
    padding:0;
    position: absolute;
    top:45%;
    z-index:100;
    cursor: pointer;
    overflow:hidden;

    @include phone {
        width:60px;
        height:60px;
    }

    @include desktop-s {
        width:70px;
        height:70px;
        top:52%;
    }
               
    .background_wrap {
         width:80px;
         height:80px;
         padding-top:27px;
         background-color:rgba($black, 1);
         transition:background .5s ease;

         @include phone {
            width:60px;
            height:60px;
            padding-top:20px;
        
            svg {
                width:20px;
                height:20px;
            }
        }

        @include desktop-s {
            width:70px;
            height:70px;
            padding-top:25px;

            svg {
                width:22px;
                height:22px;
            }
        }
        
    }

    &:hover {
        .background_wrap {
             background-color:rgba($black, 0);
             transition:background-color .5s ease;
        }
         
    }

    &:focus {
        border-radius:0;
        outline-color:none;
    }

}

.slider_button.left {
    left:var(--horizontal);
}

.slider_button.right {
     right:var(--horizontal);
}

.slider_button.hidden {
    opacity:0;
    transition: opacity 1s ease ;
}


.social {
    display:flex;
    margin-bottom:var(--vertical-l);

    a {
        margin-right:30px;

        svg {
            path {
                fill:$black;
                transition: fill .5s ease;
            }
        }

        &:hover {
            svg {
                path {
                    fill:$action;
                    transition: fill .5s ease;
                }
            }
        }

        
    }

    .facebook {
        svg {
            margin-top:-2px;
        }
    }

}  
/* ... */

